# quality_check

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: self-hosted-test.yml
dataset/: OpenSafetyMini.csv  skymizer_chat.csv
promptfoo/: README.md  eval_dl02.sh  eval_vp1902_icontain.sh  eval_vp1902_llm_rubric.sh  view.sh
promptfoo/promptfooconfig/: default.yaml  vp1902_icontain.yaml  vp1902_llm_rubric.yaml
quality_check/: config.py
quality_check/server/: README.md  llama_server.sh  test.py
quality_check/utils/: summarize.py
qwen_test/: conversation.sh  oneshot_fp16.sh  single.sh
server/: benchmark.py  openai_server.py
utils/: summarize.py
