[project]
name = "chat-wrap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.12",
    "pexpect>=4.9.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.33.0",
    "torch==2.4.1",
    "transformers==4.46.3",
    "openai>=2.2.0",
    "pandas>=2.0.3",
    "ipython>=8.12.3",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
]
